# Gym-Reservation-App

./: .env.example  Dockerfile  README.md  docker-compose.yml  dokumentacja.md  manage.py  pyproject.toml
bazyy/: asgi.py  settings.py  urls.py  wsgi.py
klub_100kg/: apps.py  forms.py  models.py  serializers.py  views.py
static/styles/: login.css  new_reservation.css  register.css  reservation_main_page.css
templates/: base.html  hero.html  login.html  main.html  modify_reservation.html  new_reservation.html  register.html
